# ntcrackfpga

./: .gitignore  PROTOCOL.md  README.md  build.ninja  genencode.py  genequality.py  genmux.py  md4suck.py  sizing.txt
.github/workflows/: build.yml
driverboard/: Cargo.toml  build.ps1  oocd-debug.cfg  oocd-program.cfg
driverboard/.cargo/: config.toml
driverboard/ardzero/: Cargo.toml
driverboard/atsamd21g18a/: Cargo.toml
driverboard/ntcrackfpga_driver/: Cargo.toml  build.rs
driverboard/ntcrackfpga_driver/src/: byte_buffer.rs  main.rs  max7300.rs
driverboard_arduino_zero/: Cargo.toml  README.md  build.ps1
driverboard_arduino_zero/ntcrackfpga_driver/: Cargo.toml
src/: clockdiv.v  hashchecker.v  md4block.v  md4calc.v  md4pwgen.v  md4test.lpf  md4test.v  ntcrackfpga.lpf  ntcrackfpga.v  ntcrackfpga_hw.v  pwadder.v
src/ecp5/: clock.v
src/hw/: clockpick.v  debounce.v  ntcrackfpga_hw.v  state_giver.v
src/inc/: byteswap.v  md4constants.v
src/sim/: clock.v
src/tests/: hashchecker_test.v  md4block_test.v  ntcrackfpga_test.v  pwadder_test.v
versaboard/: .gitignore  README.md  crystal_cap_calc.txt  fp-lib-table  versabanks.md  versaboard.kicad_pcb  versaboard.kicad_pro  versaboard.kicad_sch
versaboard/Button_Switch_SMD_Custom.pretty/: Shou_Han_TS24CA.kicad_mod
versaboard/Connector_PinHeader_2.54mm_Horizontal_SMD.pretty/: Samtec_TSM-102-01-L-SH.kicad_mod
versaboard/software/: Cargo.toml
versaboard/software/ntcrackfpga_driver/: Cargo.toml
versaboard/software/ntcrackfpga_driver/src/: byte_buffer.rs  main.rs  memory.x
(+32 files in other folders)
